# Physics-Simulation-Program

./: .gitignore  CMakeLists.txt  LICENCE  Notes  README.md  build.sh
app/: main.cpp
config/: path_config.h  program_config.h
core/: globals.h
core/Constants/: maths.h  physics.h
core/linear-algebra/: matrix.h  rotation_helpers.h  vector.h
core/maths/: matrix.h  rotation_helpers.h  vector.h
core/maths/utilities/: maths_tags.h  quantity.h  rotation_helpers.h  unit_parsing.h  unit_utilities.cpp  unit_utilities.h  units.h
core/physics/: discrete_interaction_type.h
core/quantities/: quantity.h  units.h
core/quantities/utilities/: unit_utilities.cpp  unit_utilities.h
core/random/: random_manager.cpp  random_manager.h
databases/: base_database.cpp  base_database.h  json_to_bin.cpp
databases/material-data/: material_database.h  material_database.json
databases/material_data/: material_database.h  material_database.json
databases/particle-data/: particle_database.h  particle_database.json
databases/particle_data/: particle_database.h  particle_database.json
databases/utilities/: binary_file_IO.h
objects/: box.cpp  box.h  object.cpp  object.h  object_manager.cpp  object_manager.h  point.cpp  point.h  sphere.cpp  sphere.h
objects/object-types/: box.cpp  box.h  point.cpp  sphere.cpp  sphere.h
objects/utilities/: object_attribute_assigners.h  object_initialisation_tags.h  object_tags.h  object_types.h
particles/: particle.cpp  particle.h  particle_manager.cpp  particle_manager.h  particle_source.cpp  particle_source.h
particles/particle-types/: atom.cpp  atom.h  particle_type.h  photon.cpp  photon.h
physics/: distributions.cpp  distributions.h
physics/fields/: Field notes  field_boundary_handling.cpp  field_boundary_handling.h  field_solver.cpp  field_solver.h
physics/interactions/: interaction_utilities.cpp  interaction_utilities.h
physics/interactions/continuous/: particle_continuous_interactions.cpp  particle_continuous_interactions.h
physics/interactions/discrete/: boundary_interactions.cpp  boundary_interactions.h
physics/particle-movement/: particle_continuous_interactions.cpp  particle_continuous_interactions.h
physics/processes/: interaction_utilities.cpp  interaction_utilities.h
physics/processes/continuous/: particle_continuous_interactions.cpp  particle_continuous_interactions.h
physics/processes/discrete/core/: decay_utilities.cpp  decay_utilities.h  interaction_channels.cpp  interaction_channels.h  interaction_process.h  interaction_process_registry.cpp  interaction_process_registry.h  interaction_sampling.cpp  interaction_sampling.h
physics/processes/discrete/interactions/: photon_absorption.cpp  photon_absorption.h  spontaneous_emission.cpp  spontaneous_emission.h
simulation/: simulation_clock.cpp  simulation_clock.h  step.cpp  step.h
simulation/data-collection/: output_file_name.h  particle_collection.cpp  particle_collection.h
simulation/geometry/boundary/: boundary_interactions.cpp  boundary_interactions.h
simulation/motion/: particle_motion.cpp  particle_motion.h
simulation/particle-movement/: particle_interaction.cpp  particle_interaction.h  particle_movement.cpp  particle_movement.h
simulation/stepping/: step_events.cpp  step_events.h  step_manager.cpp  step_manager.h  step_utilities.cpp  step_utilities.h
